--- a/package.json
+++ b/package.json
@@ -23,5 +23,18 @@
   "bugs": {
     "url": "https://github.com/ENPH-454-Project/client-app/issues"
   },
-  "homepage": "https://github.com/ENPH-454-Project/client-app#readme"
+  "homepage": "https://github.com/ENPH-454-Project/client-app#readme",
+  "dependencies": {
+    "axios": "^0.16.2",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "html-webpack-plugin": "^2.30.1",
+    "react": "^15.6.1",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.8.2"
+  }
 }
