--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/ENPH-454-Project/client-app.git"
   },
   "keywords": [
-    "Lser",
+    "Laser",
     "Microphone",
     "Raspberry",
     "Pi",
@@ -32,9 +32,16 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
-    "react": "^15.6.1",
+    "material-ui": "^0.19.3",
+    "node-sass": "^4.5.3",
+    "react": "^16.0.0",
+    "react-d3": "^0.4.0",
+    "react-dom": "^16.0.0",
+    "react-router-dom": "^4.2.2",
+    "react-tap-event-plugin": "^3.0.2",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.8.2"
+    "webpack-dev-server": "^2.9.1"
   }
 }
