--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "node-sass": "^4.5.3",
     "react": "^16.0.0",
     "react-d3": "^0.4.0",
+    "react-d3-basic": "^1.6.11",
+    "react-d3-core": "^1.3.9",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^3.0.2",
