--- a/package.json
+++ b/package.json
@@ -31,17 +31,14 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
-    "d3": "^4.11.0",
     "html-webpack-plugin": "^2.30.1",
     "material-ui": "^0.19.3",
     "node-sass": "^4.5.3",
     "react": "^16.0.0",
-    "react-d3": "^0.4.0",
-    "react-d3-basic": "^1.6.11",
-    "react-d3-core": "^1.3.9",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^3.0.2",
+    "recharts": "^1.0.0-apha.5",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.6.0",
