--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "chart.js": "^2.7.0",
     "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
     "material-ui": "^0.19.3",
     "node-sass": "^4.5.3",
     "react": "^16.0.0",
+    "react-chartjs-2": "^2.6.4",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^3.0.2",
