--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^3.0.2",
+    "rpi-softspi": "^1.0.5",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.6.0",
