--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.18.2",
     "chart.js": "^2.7.0",
+    "cors": "^2.8.4",
     "css-loader": "^0.28.7",
+    "express": "^4.16.2",
     "html-webpack-plugin": "^2.30.1",
     "material-ui": "^0.19.3",
     "node-sass": "^4.5.3",
@@ -40,7 +43,6 @@
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^3.0.2",
-    "rpi-softspi": "^1.0.5",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.6.0",
