--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "html-webpack-plugin": "^2.30.1",
     "material-ui": "^0.19.3",
     "node-sass": "^4.5.3",
+    "pi-spi": "^1.0.2",
     "react": "^16.0.0",
     "react-chartjs-2": "^2.6.4",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^3.0.2",
+    "rpi-softspi": "^1.0.5",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.6.0",
