--- a/PCversion/package.json
+++ b/PCversion/package.json
@@ -25,6 +25,8 @@
   },
   "homepage": "https://github.com/ENPH-454-Project/client-app#readme",
   "dependencies": {
+    "audio-generator": "^2.1.2",
+    "audio-speaker": "^1.5.0",
     "axios": "^0.16.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -37,6 +39,7 @@
     "express": "^4.16.2",
     "html-webpack-plugin": "^2.30.1",
     "material-ui": "^0.19.3",
+    "node-core-audio": "^0.5.1",
     "node-sass": "^4.5.3",
     "react": "^16.0.0",
     "react-chartjs-2": "^2.6.4",
