--- a/PCversion/package.json
+++ b/PCversion/package.json
@@ -49,6 +49,7 @@
     "sass-loader": "^6.0.6",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
+    "speaker": "^0.4.0",
     "style-loader": "^0.18.2",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
