--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/ENPH-454-Project/client-app#readme",
   "dependencies": {
+    "aws-sdk": "^2.162.0",
     "axios": "^0.16.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -40,13 +41,18 @@
     "node-sass": "^4.5.3",
     "pi-spi": "^1.0.2",
     "react": "^16.0.0",
+    "react-audio": "0.0.1",
+    "react-audio-component": "^1.1.0",
+    "react-audio-player": "^0.6.4",
     "react-chartjs-2": "^2.6.4",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^3.0.2",
     "rpi-softspi": "^1.0.5",
     "sass-loader": "^6.0.6",
+    "speaker": "^0.4.0",
     "style-loader": "^0.18.2",
+    "wav": "^1.0.1",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   }
